--- a/web/View/css/style.css
+++ b/web/View/css/style.css
@@ -221,10 +221,12 @@ nav{
 }
 
 nav img{
-    width: 150px;
+    width: 90px;
+    height: 80px;
     position: absolute;
-    top: 17px;
-    left: 12%;
+    top: 1px;
+    left: 8%;
+    border-radius: 30px;
 }
 nav ul{
     float: right;
@@ -319,4 +321,161 @@ label #btn, label #cancel{
     #check:checked ~ label #cancel{
         display: block;
     }
+}
+
+
+
+
+footer{
+    color: #d9d9d9;
+    bottom: 0px;
+    width: 100%;
+    background: #111;
+    
+    /* display: flex;
+    flex-direction: column; */
+}
+.main-content{
+    display: flex;
+}
+.main-content .box{
+    flex-basis: 50%;
+    padding: 10px 20px;
+}
+.box h2{
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.box .content{
+    margin: 20px 0 0 0;
+    position: relative;
+}
+.box .content:after{
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 15%;
+    background: #f12020;
+    top: -10px;
+} 
+.box .content:before{
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 100%;
+    background: #1a1a1a;
+    top: -10px;
+} 
+.left .content .social{
+    margin: 20px 0 0 0;
+}
+.left .content .social a{
+    padding: 0 2px;
+}
+.left .content .social a span{
+    width: 40px;
+    height: 40px;
+    background: #1a1a1a;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 5px;
+    font-size: 18px;
+    transition: 0.3s;
+}
+.left .content .social a span:hover{
+    background: #f12020;
+}
+.left .content p{
+    text-align: justify;
+}
+.center.content .fas{
+    font-size: 23px;
+    background: #1a1a1a;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    border-radius: 50%;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.center .content .fas:hover{
+    background: #f12020;
+}
+.center .content .text{
+    font-size: 17px;
+    font-weight: 500;
+    padding-left: 10px;
+}
+.center .content .phone{
+    margin: 10px 0;
+}
+.center .content .msg{
+    margin-top: 10px;
+}
+.right form input, .right form textarea{
+    width: 100%;
+    font-size: 17px;
+    background: #151515;
+    padding-left: 10px;
+    border: 1px solid #222222;
+
+}
+.right form input{
+    height:35px ;
+}
+.right form input:focus,
+ .right form textarea:focus{
+    outline-color: #3498db;
+}
+.right form .text{
+    font-size: 17px;
+    margin-bottom: 2px;
+    color: #656565;
+    
+}
+.right form .btn{
+    margin-top: 10px;
+
+}
+.right form .btn button{
+    height: 40px;
+    width: 100%;
+    background: #f12020;
+    font-size: 17px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: .3s;
+}
+.right form .btn button:hover{
+    background: #000;
+}
+.bottom .center{
+    padding: 5px;
+    font-size: 15px;
+    background: #151515;
+}
+.bottom .center span{
+    color: #656565;
+}
+.bottom .center a{
+    color: #f12020;
+    text-decoration: none;
+}
+
+@media screen and (max-width:900px){
+    footer{
+        position: relative;
+        bottom: 0px;
+        /* position: fixed; */
+    }
+    .min-content{
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .min-content .box{
+    margin: 5px 0;
+    }
+    
 }
